--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="back"></div>
-        <video autoplay loop>
+        <video autoplay muted loop>
             <source src="./vid/hero_01_fullsize.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
             <source src="./vid/hero_01_fullsize.webm" type='video/webm; codecs="vp8, vorbis"'>
             Your browser does not support HTML5 video.
