--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv='X-UA-Compatible' content='IE=Edge'/>
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="icon" href="./img/favicon.png" type="image/x-icon">
         <title>Valve</title>
