--- a/index.html
+++ b/index.html
@@ -15,195 +15,203 @@
             <source src="./vid/hero_01_fullsize.webm" type='video/webm; codecs="vp8, vorbis"'>
             Your browser does not support HTML5 video.
          </video>
-        <header>
-            <div class="logo">
-                <a href="#"><img src="./img/valve.svg"></a>
+         <div class="wrapper">
+            <div>
+                <header>
+                    <div class="logo">
+                        <a href="#"><img src="./img/valve.svg"></a>
+                    </div>
+                </header>
+            </div>  
+            <div>
+                <main>
+                    <div class="first">
+                        <div class="info">
+                            <h2>We make games, Steam, and hardware. Join us.</h2>
+                            <p>We're seeking collaborators who are the best at what they do. Opportunities at Valve run broad and deep across the following areas, where we're always hiring for all positions.</p>
+                        </div>
+                        <div class="search">
+                            <form>
+                                <input placeholder="Search Jobs" type="text" username="name">
+                            </form>
+                        </div>
+                    </div>
+                </main>
             </div>
-        </header>
-        <main>
-            <div class="first">
-                <div class="info">
-                    <h2>We make games, Steam, and hardware. Join us.</h2>
-                    <p>We're seeking collaborators who are the best at what they do. Opportunities at Valve run broad and deep across the following areas, where we're always hiring for all positions.</p>
-                </div>
-                <div class="search">
-                    <form>
-                        <input placeholder="Search Jobs" type="text" username="name">
-                    </form>
-                </div>
+            <div class="accordion">
+                <details>
+                    <summary>Art</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>3D Character Artist</div>
+                            <div>2D Artist</div>
+                            <div>Technical Artist</div>
+                            <div>Animator</div>
+                            <div>3D Environment Artist</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Audio</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Sound Designer</div>
+                            <div>Acoustic Engineer</div>
+                            <div>Audio Software Engineer</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Business Development</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Business Development</div>
+                            <div>Steam Partner</div>
+                            <div>Technical Account</div>
+                            <div>Manager</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Data Science</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Economist<br><br></div>
+                            <div>Research<br><br></div>
+                            <div>Statistician / Data Scientist</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Finance</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Finance<br><span style="font-size: 20px; font-weight:400;">Other</span></div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Game Design</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Level Designer</div>
+                            <div>UX Motion Designer</div>
+                            <div>Psychologist</div>
+                            <div>Sound Designer</div>
+                            <div>Writer</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Hardware</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Electrical Engineer</div>
+                            <div>Industrial Designer</div>
+                            <div>Optical Engineer</div>
+                            <div>Mechanical Engineer<br><br></div>
+                            <div>Display Engineer<br><br></div>
+                            <div>Supply Chain Program Manager</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Product Design</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Industrial Designer</div>
+                            <div>Visual & UX Designer</div>
+                            <div>UX Motion Designer</div>
+                            <div>Other</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Software Engineering</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Anti-Cheat Software Engineer</div>
+                            <div>Game Development Software Engineer</div>
+                            <div>Steam Database Administrator</div>
+                            <div>Web Applications Software Engineer</div>
+                            <div>Software Engineer for VR & Hardware</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Technical Infrastructure</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>Steam Database Administrator</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Writing</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>3D Character Artist</div>
+                            <div>2D Artist</div>
+                            <div>Technical Artist</div>
+                            <div>Animator</div>
+                            <div>3D Environment Artist</div>
+                        </div>
+                    </div>
+                </details>
+                <details>
+                    <summary>Did we miss something?</summary>
+                    <div class="content">
+                        <div class="d1">
+                            <div>3D Character Artist</div>
+                            <div>2D Artist</div>
+                            <div>Technical Artist</div>
+                            <div>Animator</div>
+                            <div>3D Environment Artist</div>
+                        </div>
+                    </div>
+                </details>
             </div>
-        </main>
-        <div class="accordion">
-            <details>
-                <summary>Art</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>3D Character Artist</div>
-                        <div>2D Artist</div>
-                        <div>Technical Artist</div>
-                        <div>Animator</div>
-                        <div>3D Environment Artist</div>
+            <div class="footer">
+                <footer>
+                    <div class="links">      
+                        <ul>
+                            <li style="font-size: 18px; letter-spacing: 1px">Valve Corporation</li>
+                            <li><br></li>
+                            <li><br></li>
+                            <li><br></li>
+                            <li><br></li>
+                        </ul>
+                        <ul>
+                            <li>Contact</li>
+                            <li><a href="#">People</a></li>
+                            <li><a href="#">Press Inquiries</a></li>
+                            <li><br></li>
+                            <li><br></li>
+                        </ul>
+                        <ul>
+                            <li>Stuff</li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Jobs</a></li>
+                            <li><a href="#">Steam Partners</a></li>
+                            <li><a href="#">Publications</a></li>
+                        </ul>
+                        <ul>
+                            <li>More Stuff</li>
+                            <li><a href="#">Site Terms of Use</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Legal</a></li>
+                        </ul>
+                        <ul>
+                        <li><a href="https://store.steampowered.com" target="_blank"><img style="width: 90px; border-right: 1px solid #ffffff; padding-right: 10px" src="./img/steam_logo_footer.png"></a><a href="https://partner.steamgames.com" target="_blank"><img style="width: 125px; padding-left: 10px" src="./img/steamworks_logo_footer.png"></a></li>
+                        <li><br></li>
+                        <li><br></li>
+                        <li><br></li>
+                        </ul>
                     </div>
-                </div>
-            </details>
-            <details>
-                <summary>Audio</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Sound Designer</div>
-                        <div>Acoustic Engineer</div>
-                        <div>Audio Software Engineer</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Business Development</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Business Development</div>
-                        <div>Steam Partner</div>
-                        <div>Technical Account</div>
-                        <div>Manager</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Data Science</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Economist<br><br></div>
-                        <div>Research<br><br></div>
-                        <div>Statistician / Data Scientist</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Finance</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Finance<br><span style="font-size: 20px; font-weight:400;">Other</span></div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Game Design</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Level Designer</div>
-                        <div>UX Motion Designer</div>
-                        <div>Psychologist</div>
-                        <div>Sound Designer</div>
-                        <div>Writer</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Hardware</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Electrical Engineer</div>
-                        <div>Industrial Designer</div>
-                        <div>Optical Engineer</div>
-                        <div>Mechanical Engineer<br><br></div>
-                        <div>Display Engineer<br><br></div>
-                        <div>Supply Chain Program Manager</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Product Design</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Industrial Designer</div>
-                        <div>Visual & UX Designer</div>
-                        <div>UX Motion Designer</div>
-                        <div>Other</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Software Engineering</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Anti-Cheat Software Engineer</div>
-                        <div>Game Development Software Engineer</div>
-                        <div>Steam Database Administrator</div>
-                        <div>Web Applications Software Engineer</div>
-                        <div>Software Engineer for VR & Hardware</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Technical Infrastructure</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>Steam Database Administrator</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Writing</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>3D Character Artist</div>
-                        <div>2D Artist</div>
-                        <div>Technical Artist</div>
-                        <div>Animator</div>
-                        <div>3D Environment Artist</div>
-                    </div>
-                </div>
-            </details>
-            <details>
-                <summary>Did we miss something?</summary>
-                <div class="content">
-                    <div class="d1">
-                        <div>3D Character Artist</div>
-                        <div>2D Artist</div>
-                        <div>Technical Artist</div>
-                        <div>Animator</div>
-                        <div>3D Environment Artist</div>
-                    </div>
-                </div>
-            </details>
+                </footer>
+            </div>
         </div>
-        <footer>
-            <div class="links">      
-                <ul>
-                    <li style="font-size: 18px; letter-spacing: 1px">Valve Corporation</li>
-                    <li><br></li>
-                    <li><br></li>
-                    <li><br></li>
-                    <li><br></li>
-                </ul>
-                <ul>
-                    <li>Contact</li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Press Inquiries</a></li>
-                    <li><br></li>
-                    <li><br></li>
-                </ul>
-                <ul>
-                    <li>Stuff</li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#">Steam Partners</a></li>
-                    <li><a href="#">Publications</a></li>
-                </ul>
-                <ul>
-                    <li>More Stuff</li>
-                    <li><a href="#">Site Terms of Use</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Security</a></li>
-                    <li><a href="#">Legal</a></li>
-                </ul>
-                <ul>
-                  <li><a href="https://store.steampowered.com" target="_blank"><img style="width: 90px; border-right: 1px solid #ffffff; padding-right: 10px" src="./img/steam_logo_footer.png"></a><a href="https://partner.steamgames.com" target="_blank"><img style="width: 125px; padding-left: 10px" src="./img/steamworks_logo_footer.png"></a></li>
-                  <li><br></li>
-                  <li><br></li>
-                  <li><br></li>
-                </ul>
-            </div>
-        </footer>
     <script src="./js/index.js"></script>
     </body>
 </html>
